forked from jing

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
         <h3>Inserimento Studente</h3>
         <div>
             <span>nome</span>
-            <input type="text">
+            <input type="text" id = "input-name">
         </div>
         <div>
             <span>cognome</span>
-            <input type="text">
+            <input type="text" id = "input-surname">
         </div>
         <button onclick="addStudentToClassroom()">Inserisci studente</button>
     </div>
 </body>
+<script src="./student.js"></script>
+<script src="./classroom.js"></script>
+<script src="./main.js"></script>
 </html>
