--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClassRoom Manager</title>
+    <link rel="shortcut icon"
+        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSF2a0MrnrPnaSM2GkRFnL2cLuMwbt6UBbS17u6uRJqAcwu9xhDpsXbv26444NRUNPXdeQ&usqp=CAU"
+        type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <title>Classroom Manager</title>
 </head>
-<body>
-    <h1>Classroom Manager</h1>
-    <ul id="student-list">
 
-    </ul>
-    <button onclick="shuffleTheClassroom()">Rimescola la classe</button>
-    <div>
-        <h3>Inserimento Studente</h3>
+<body>
+    <h1>CLASSROOM MANAGER</h1>
+    <div class="main-div">
+        <div class="left-div">
+        <ul id="student-list">
+
+        </ul>
+    </div>
+    <div class="right-div">
+        <button onclick="shuffleTheClassroom()">Rimescola la classe</button>
         <div>
-            <span>nome</span>
-            <input type="text" id = "input-name">
+            <h3>Inserimento Studente</h3>
+            <div>
+                <span>nome</span>
+                <input type="text" id="input-name" onclick="resetInputNameOnClick()">
+            </div>
+            <div>
+                <span>cognome</span>
+                <input type="text" id="input-surname" onclick="resetInputSurnameOnClick()">
+            </div>
+            <button onclick="addStudentToClassroom()">Inserisci studente</button>
         </div>
-        <div>
-            <span>cognome</span>
-            <input type="text" id = "input-surname">
-        </div>
-        <button onclick="addStudentToClassroom()">Inserisci studente</button>
+    </div>
     </div>
 </body>
 <script src="./student.js"></script>
 <script src="./classroom.js"></script>
 <script src="./main.js"></script>
+
 </html>
