--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <span>Nome</span>
                 <input type="text" id="input-name" onclick="resetInputNameOnClick()">           
                 <span>Cognome</span>
-                <input type="text" id="input-surname" onclick="resetInputSurnameOnClick()">            
+                <input type="text" id="input-surname" onclick="resetInputSurnameOnClick()"> 
+                <span>Data di nascita</span>
+                <input type="text" id="input-date" onclick="resetInputNameOnClick()">                 
         </div>
             
         </div>
