media query start

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span>Cognome</span>
                 <input type="text" id="input-surname" onclick="resetInputSurnameOnClick()"> 
                 <span>Data di nascita</span>
-                <input type="text" id="input-date" onclick="resetInputNameOnClick()">                 
+                <input type="text" id="input-date" placeholder="gg/mm/aaaa">                 
         </div>
             
         </div>
