--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>CLASSROOM MANAGER</h1>
+    <h1 >CLASSROOM MANAGER</h1>
     <div class="main-div">
         <div class="left-div">
         <ul id="student-list">
@@ -32,7 +32,7 @@
                 <span>Cognome</span>
                 <input type="text" id="input-surname" onclick="resetInputSurnameOnClick()"> 
                 <span>Data di nascita</span>
-                <input type="text" id="input-date" placeholder="gg/mm/aaaa">                 
+                <input type="text" id="input-date" placeholder="gg/mm/aaaa" onclick="resetInputDateOnClick()">                 
         </div>
             
         </div>
