update media query

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSF2a0MrnrPnaSM2GkRFnL2cLuMwbt6UBbS17u6uRJqAcwu9xhDpsXbv26444NRUNPXdeQ&usqp=CAU"
         type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./new-style.css">
     <title>Classroom Manager</title>
 </head>
 
